# se-online

./: .gitignore  .gitmodules  BiasedProxEnsemble.py  BiasedSGDEnsemble.py  CMakeLists.txt  DecisionTree.py  Dockerfile  JaxModel.py  MoaModel.py  OnlineLearner.py  PrimeModel.py  ProxPruningClassifier.py  PyBiasedProxEnsemble.py  Readme.md  RiverModel.py  SEModel.py  SGDEnsemble.py  TorchModel.py  WindowedTree.py  debug.cpp  debug.py  environment.yml  explore_batch.ipynb  explore_online.py  explore_results.ipynb  run.py  setup.py  startup.sh
Docker/: Dockerfile  startup.sh
ads/: init.sh
airlines/: init.sh
archive/: PyBiasedProxEnsemble.py  debug.cpp  debug.py
archive/PyBPE.egg-info/: PKG-INFO
archive/batch/: explore_batch.ipynb
archive/batch/covertype/: run.py
archive/batch/magic/: run.py
archive/include/: BiasedProxEnsemble.h  Datatypes.h  Regularizer.h  Tree.h
archive/old/magic/: run.cpp
archive/online/: README.md
archive/online/activity/: run.py
archive/online/covtype/: run.py
archive/resource/: nsswitch.conf
batch/: explore_batch.ipynb
batch/covertype/: run.cpp  run.py
batch/magic/: pruning.py  run.cpp  run.py
covertype/: run.py
covtype/: init.sh
gas-sensor/: init.sh  minimal_example.py
gmsc/: run.py
include/: BiasedProxEnsemble.h  Datatypes.h  Losses.h  Python.cpp  Tensor.h  Tree.h
kdd99/: init.sh
magic/: run.cpp  run.py  run_cpp.py
occupancy/: init.sh  run.py
old/: BiasedProxEnsemble-old.py  ProxEnsemble.py  get_accuracies.py
online/: README.md  explore_online.py  run.py
online/activity/: init.sh
online/covtype/: run.py
online/elec/: run.py
online/gas-sensor/: run.py
online/gmsc/: init.sh
online/internet_ads/: run.py
online/kddcup/: run.py
online/nomao/: run.py
online/synthetic/: run.py
satlog/: run.py
spam/: init.sh
stream51/: init.sh  prepare.py
synthetic/: init.sh
